Fixes for colors / list hover backgrounds & collapse caret fine-tune

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -5,7 +5,7 @@
 // @eq-color-text: #e5e7f6;   // MAIN text
 
 @eq-color-base:       #343240; // main background
-@eq-color-dark:       #312d3d; // Slightly lightened version of the base color
+@eq-color-dark:       #3a3849; // Slightly lightened version of the base color
 @eq-color-text:       #c2c7e4;   // MAIN text
 
 @eq-color-highlight:  #f2f4ff;   // highlighted & selected text
@@ -15,7 +15,7 @@
 @eq-color-info:       #4f6edb;   // inputs, something else?
 @eq-color-success:    #74c38f;  // green / success
 @eq-color-warning:    #dbc290;  // warning
-@eq-color-modified:   #d96ba6;  // modified
+@eq-color-modified:   #cad982;  // modified
 @eq-color-error:      #d7305e;  // red / error
 // @eq-color-5: #E5E9F0;   // DUNNOLOL
 // @eq-color-7: #57e2e2;   // cyan ???
